--- a/projet.css
+++ b/projet.css
@@ -42,7 +42,8 @@
 .grid figcaption h3 {
 	margin: 0;
 	padding: 0;
-	color: #fff;
+	text-shadow: 0px 0px 1px #000000;
+	color: #ff0000;
 }
 
 .grid figcaption span:before {
