--- a/style.css
+++ b/style.css
@@ -148,13 +148,20 @@ h2{
 	text-decoration: underline;
 }
 h3{
-
 	font-family: 'Istok Web', sans-serif;
 }
 p, li{
 
 	font-family: Raleway;
 	color:white;
+}
+.important{
+	text-shadow: 0px 0px 1px #000000;
+	color: #ff0000;
+}
+.important-2{
+	text-shadow: 0px 0px 1px #000000;
+	color: #00ad57;
 }
 #photo_profil{
 
@@ -193,56 +200,9 @@ p, li{
 	margin: auto;
 	margin-left:0;
 }
-progress{
-
-	display: inline-block;
-	box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-	width: 140%;
-	height: 20px;
-	padding: 3px 3px 2px 3px;
-	border: 1px solid rgba(0,0,0,.5);
-	border-radius: 15px;
-	box-shadow: 0 1px 0 rgba(255,255,255,.2);   
-}
 progress::-webkit-progress-bar{
 
 	background: transparent;
-}
-progress::-webkit-progress-value{ /* etat general progress bar de chrome */
-
-	border-radius: 50px;
-	box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);
-}
-#aa::-moz-progress-bar {
-
-	box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);
-	background:-moz-gradient(linear,0 100%,100% 0,from(transparent),
-		color-stop(transparent,0.33),color-stop(rgba(0, 0, 0, 0.1),0.33),
-		color-stop(rgba(0, 0, 0, 0.1),0.66),color-stop(transparent,0.66)),
-		-moz-gradient(linear,left top,left bottom,from(rgba(255, 255, 255, 0.25)),to(rgba(0, 0, 0, 0.2))),
-		-moz-gradient(linear,left top,right top,from(#f57a06),to(#f57a06));
-	background:-moz-linear-gradient(45deg, transparent, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%),
-		-moz-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.2)),
-		-moz-linear-gradient(left, #f57a06, #f57a06);	
-	background-size: 25px 14px, 100% 100%, 100% 100%;
-		-moz-animation: 2s linear infinite move;
-}
-#aa::-webkit-progress-value {
-
-	background:-webkit-gradient(linear,0 100%,100% 0,from(transparent),
-		color-stop(transparent,0.33),color-stop(rgba(0, 0, 0, 0.1),0.33),
-		color-stop(rgba(0, 0, 0, 0.1),0.66),color-stop(transparent,0.66)),
-		-webkit-gradient(linear,left top,left bottom,from(rgba(255, 255, 255, 0.25)),to(rgba(0, 0, 0, 0.2))),
-		-webkit-gradient(linear,left top,right top,from(#f57a06),to(#f57a06));
-	background:-webkit-linear-gradient(45deg, transparent, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%),
-		-webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.2)),
-		-webkit-linear-gradient(left, #f57a06, #f57a06);	
-			background-size: 25px 14px, 100% 100%, 100% 100%;
-	background-size: 25px 14px, 100% 100%, 100% 100%;
-	animation:move 4s linear 0 infinite;
-		-webkit-animation: move 4s linear 0 infinite;
 }
 /*----------------------------------------  page Projets  -----------------------------------------------------*/
 .modal-example-content{
@@ -423,6 +383,7 @@ input[type='submit']:hover{
 }
 /*-----------------------git----------------------------*/
 div span{
+	text-shadow: 0px 0px 1px #000000;
 	color: white;
 	display: inline-block;
 }
@@ -443,18 +404,21 @@ div span{
 	background-size: 25px 14px, 100% 100%, 100% 100%;
 	border-radius: 50px;
 	box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);
+	animation-name: move;
+    animation-duration: 200s;
+    timing-function: linear;
 }
 #a::-webkit-progress-value {
 	background:
 		-webkit-linear-gradient(45deg, transparent, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%),
 		-webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.2)),
-		-webkit-linear-gradient(left, #0000da, #0000da);
+		-webkit-linear-gradient(left, #f57a06, #f57a06);
 }
 #a::-moz-progress-bar {
 	background:
 		-moz-linear-gradient(45deg, transparent, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%),
 		-moz-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.2)),
-		-moz-linear-gradient(left, #0000da, #0000da);
+		-moz-linear-gradient(left, #f57a06, #f57a06);
 
 }
 #b::-webkit-progress-value {
@@ -628,18 +592,21 @@ div span{
 @keyframes move{
 
 	0% {background-position: 0px 0px, 0 0, 0 0;}
-	100% {background-position: +100px 0px, 0 0, 0 0;}
+	100% {background-position: 100px 0px, 0 0, 0 0;}
 }
+
 @-webkit-keyframes move{
 
 	0% {background-position: 0px 0px, 0 0, 0 0;}
 	100% {background-position: +100px 0px, 0 0, 0 0;}
 }
+
 @-moz-keyframes move{
 
 	0% {background-position: 0px 0px, 0 0, 0 0;}
-	100% {background-position: +100px 0px, 0 0, 0 0;}
+	100% {background-position: 100px 0px, 0 0, 0 0;}
 }
+
 @-o-keyframes move{
 
 	0% {background-position: 0px 0px, 0 0, 0 0;}
